# node-backend

./: .gitignore  Cargo.toml  README.md  app.go  go.mod  go.sum  main.go
app/: main.go
database/: database.go
entities/account/: account.go  authentication.go  cloud_files.go  keys.go  ranks.go  sessions.go  subscription.go
entities/account/properties/: friends.go  profile.go  settings.go  stored_action.go  stored_actions.go  vault.go
entities/account/settings/: settings.go
entities/app/: app.go  nodes.go
entities/app/projects/: container.go  event.go  member.go  project.go
entities/node/: cluster.go  node.go
migration/src/: m20220101_000001_create_table.rs
nbchallenges/: challenges.go  challenges_handler.go
routes/: router.go
routes/account/: account.go  get.go  me.go  remote_id.go
routes/account/auth/: auth.go  login.go  refresh.go  register.go
routes/account/files/: favorite.go  files.go  info.go  (+3 more)
routes/app/: app.go
routes/auth/: auth.go  register.go
routes/cluster/: add.go  cluster.go  list.go  remove.go
routes/node/: list.go  node.go  this.go  token.go
routes/session/: logout.go  session.go  upgrade.go
routes/v1/: pub.go  router.go
src/: main.rs
src/auth/: auth.rs  mod.rs
standards/: accountstd.go
starter/: cli.go  starter.go
test/: entry.go
tests/: encryption_test.go
util/: aes.go  configuration.go  jwtgen.go  responses.go  rsa.go  rsa_test.go  util.go
util/auth/: argon2.go  login.go  token.go  util.go
util/mail/: mail.go
util/nodes/: nodes.go  offline.go
util/requests/: pipes_integration.go  requests.go
(+111 files in other folders)
