[package]
name = "node-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# uwu
# uwu
# uwu
# uwu
# uwu
# uwu


[dependencies]
actix-web = "4.2.1"
sea-orm = { version = "0.10.6", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ]}
serde = { version = "1.0.152", features = ["derive"] }
